# Rae

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  sonar-project.properties
.github/workflows/: build.yml
Rae/: CMakeLists.txt
Rae/Rae/: Rae.cpp  Rae.hpp
Rae/Rae/Config/: Version.hpp.in
Rae/Rae/Core/: Base.hpp
cmake/: ClangTidy.cmake  CompilerWarnings.cmake
